--- a/css/main.css
+++ b/css/main.css
@@ -34,23 +34,6 @@ body{
     z-index: 8;
 }
 
-#board-lists {
-    background: #0079BF;
-    user-select: none;
-    margin-top: 80px;
-    margin-bottom: 10px;
-    overflow-x: auto;
-    overflow-y: hidden;
-    padding-bottom: 10px;
-    padding-right: 56px;
-    position: absolute;
-    border:none;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-}
-
 content{
     padding: 10px; 
 }
@@ -85,6 +68,7 @@ content{
     background-color:#E2E4E6;
     border-radius: 3px;
     display: inline-block;
+    overflow: auto;
     margin-right: 15px;
     margin-bottom: 15px;
     padding: 5px;
@@ -115,3 +99,37 @@ content{
     width: 75px;
     height: 32px;
 }
+
+.text{
+    width: 300px;
+    border-radius: 3px;
+    background-color: #006AA8;
+    font-size: 16px;
+    padding: 6px 8px;
+    background: linear-gradient(#F2F2F2,#E6E6E6);
+    float: left;
+    margin-bottom: 5px;
+    word-wrap: break-word;
+}
+
+.name-list {
+    font-weight: bold;
+    border: none;
+    font-size: 20px;
+  }
+  .line {
+    text-decoration: underline;
+    cursor: pointer;
+  }
+  .textarea-tarjeta{
+    border: none;
+    width: 300px;
+    height: 60px;
+    overflow: hidden;
+    padding: 5px;
+    font-size: 15px;
+    border: 1px solid #fff;
+  }
+  div{
+      margin-bottom: 10px;
+  }
